--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13"
   },
